Mult extensions version of tFindFiles working in windows.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/build/TacentInstall",
 			"environment": [],
-			"externalConsole": false,
+			"console": "internalConsole",	// Or externalConsole.
 		}
 	]
 }
