Implemented a simple shared pointer. Will be using it to implement promises. Will be using promises to implement getting network shares asynchronously. tSharedPtr is wip as the satellite information needs to become thread-safe.

--- a/Modules/Foundation/CMakeLists.txt
+++ b/Modules/Foundation/CMakeLists.txt
@@ -32,6 +32,8 @@ add_library(
 	Inc/Foundation/tFundamentals.h
 	Inc/Foundation/tHash.h
 	Inc/Foundation/tList.h
+	Inc/Foundation/tMap.h
+	Inc/Foundation/tSmartPointers.h
 	Inc/Foundation/tMemory.h
 	Inc/Foundation/tPlatform.h
 	Inc/Foundation/tPool.h
