--- a/Modules/Foundation/CMakeLists.txt
+++ b/Modules/Foundation/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(
 	Inc/Foundation/tList.h
 	Inc/Foundation/tMap.h
 	Inc/Foundation/tSmartPointers.h
+	Inc/Foundation/tPromise.h
 	Inc/Foundation/tMemory.h
 	Inc/Foundation/tPlatform.h
 	Inc/Foundation/tPool.h
