--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -3,6 +3,12 @@ project(Modules VERSION ${TACENT_VERSION})
 add_subdirectory(Foundation)
 add_subdirectory(Math)
 add_subdirectory(System)
-add_subdirectory(Image)
-add_subdirectory(Pipeline)
-add_subdirectory(Scene)
+
+tacent_is_arch_arm(IsArm)
+if (IsArm)
+	message(STATUS "Tacent -- Arm Architecture. Excluding Some Modules.")
+else()
+	add_subdirectory(Image)
+	add_subdirectory(Pipeline)
+	add_subdirectory(Scene)
+endif()
