Renamed tCommand to tCmdLine for clarity. The namespace and functions are for parsing command lines.

--- a/Modules/System/CMakeLists.txt
+++ b/Modules/System/CMakeLists.txt
@@ -4,7 +4,7 @@ project(System VERSION ${TACENT_VERSION} LANGUAGES CXX)
 add_library(
 	${PROJECT_NAME}
 	Src/tChunk.cpp
-	Src/tCommand.cpp
+	Src/tCmdLine.cpp
 	Src/tFile.cpp
 	Src/tMachine.cpp
 	Src/tPrint.cpp
@@ -14,7 +14,7 @@ add_library(
 	Src/tThrow.cpp
 	Src/tTime.cpp
 	Inc/System/tChunk.h
-	Inc/System/tCommand.h
+	Inc/System/tCmdLine.h
 	Inc/System/tFile.h
 	Inc/System/tMachine.h
 	Inc/System/tPrint.h
