--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
         cmake .. -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 17 2022" -Ax64
         # cmake .. -DCMAKE_BUILD_TYPE=Release -G "NMake Makefiles"
         echo '*** CMake Build ***'
-        nmake install
+        # nmake install
+        cmake --build . --config Release --target install
         echo '*** Done Building ***'
     
     - name: Unit Tests
