tImageDDS can read and decode BC7. Support for non-power-of-2 dds files and ones with the DX10 header block so we can load non-legacy dds files.

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -64,6 +64,10 @@ add_library(
 	# TinyEXIF
 	Contrib/TinyEXIF/TinyEXIF.h
 	Contrib/TinyEXIF/TinyEXIF.cpp
+
+	# BC Decode
+	Contrib/bcdec/bcdec.h
+	Contrib/etcdec/etcdec.h
 )
 
 tacent_target_include_directories(${PROJECT_NAME})
