--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,14 +34,15 @@ jobs:
         # nmake install
         cmake --build . --config Release --target install
         echo '*** Done Building ***'
-    
+
     - name: Unit Tests
       run: |
         echo 'Running Unit Tests'
         cd build
         cd TacentInstall
         powershell ".\UnitTests.exe | tee Windows_TestResults.txt"
-        echo 'Done Running Unit Tests'
+        echo %errorlevel%
+        echo '*** Done Running Unit Tests ***'
 
     - name: Unit Test Results
       uses: actions/upload-artifact@v1
