Trying with redirect instead of tee. It's tedious debugging github actions.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,8 +71,8 @@ jobs:
         echo 'Running Unit Tests'
         cd build
         cd TacentInstall
-        ./UnitTests | tee Ubuntu_TestResults.txt
-        echo 'Done Running Unit Tests'
+        ./UnitTests > Ubuntu_TestResults.txt
+        echo '*** Done Running Unit Tests ***'
 
     - name: Unit Test Results
       uses: actions/upload-artifact@v1
