First successful parsing and decoding of a ktx2 file in BC1 format. Decoded file is saved as a tga by the unit tests. Added tPixelUtil module so code can be shared between loaders (eg. DDS and KTX loaders both need to know about the same compressed formats).

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library(
 	Src/tMetaData.cpp
 	Src/tPicture.cpp
 	Src/tPixelFormat.cpp
+	Src/tPixelUtil.cpp
 	Src/tTexture.cpp
 	Src/tResample.cpp
 	Inc/Image/tCubemap.h
@@ -44,6 +45,7 @@ add_library(
 	Inc/Image/tMetaData.h
 	Inc/Image/tPicture.h
 	Inc/Image/tPixelFormat.h
+	Inc/Image/tPixelUtil.h
 	Inc/Image/tTexture.h
 	Inc/Image/tResample.h
 	
