Abstract base for all tImageNNN image loaders.

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(
 	Src/tPixelUtil.cpp
 	Src/tTexture.cpp
 	Src/tResample.cpp
+	Inc/Image/tBaseImage.h
 	Inc/Image/tCubemap.h
 	Inc/Image/tFrame.h
 	Inc/Image/tImageAPNG.h
