Quantize-exact function for cases where there are few enough unique pixel colours to allow the palette to represent all pixels exactly. In these cases quantization is not needed.

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library(
 	Src/tPicture.cpp
 	Src/tPixelFormat.cpp
 	Src/tPixelUtil.cpp
+	Src/tQuantizeFixed.cpp
 	Src/tQuantizeSpatial.cpp
 	Src/tQuantizeNeu.cpp
 	Src/tTexture.cpp
