Skeleton for Wu quantization is in.

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -30,6 +30,7 @@ add_library(
 	Src/tQuantizeFixed.cpp
 	Src/tQuantizeSpatial.cpp
 	Src/tQuantizeNeu.cpp
+	Src/tQuantizeWu.cpp
 	Src/tTexture.cpp
 	Src/tResample.cpp
 	Inc/Image/tBaseImage.h
