Gifenc is now used to encode high-quality gifs. Supports using any of the 4 available quantizers, transparency with an alpha-threshold, animation, per-frame duration, and looping parameters. Note if transparency is enabled, one less colour is available to the quantizer -- so an 8 bit gif palette will get 255 colours with the last index used for transparency.

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -68,6 +68,8 @@ add_library(
 	Contrib/ApngDis/apngdis.cpp
 	Contrib/bcdec/bcdec.h
 	Contrib/ASTCEncoder/include/astcenc.h
+	Contrib/gifenc/gifenc.h
+	Contrib/gifenc/gifenc.c
 	Contrib/GifLoad/gif_load.h
 	Contrib/GifSave/gif.h
 	Contrib/LibKTX/include/ktx.h
