Renamed tIntervals to tIntervalSet. Moved all interval code to its own header as it was fairly complex and polluting the fundamentals.

--- a/Modules/Math/CMakeLists.txt
+++ b/Modules/Math/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(
 	Src/tSpline.cpp
 	Inc/Math/tColour.h
 	Inc/Math/tGeometry.h
+	Inc/Math/tInterval.h
 	Inc/Math/tLinearAlgebra.h
 	Inc/Math/tMatrix2.h
 	Inc/Math/tMatrix4.h
