Small-float packed formats. F11F11F10 is a 32-bit packed format supporting 2xE5M6 and 1xE5M5 floats (no sign bit). M9M9M9E5 is a 32-bit packed format supporting 3xE5M9 (3xF14) but with a shared 5-bit exponent and no sign bit. Because of the shared exponent this format does not used normalized mantissa (always denorm).

--- a/Modules/Foundation/CMakeLists.txt
+++ b/Modules/Foundation/CMakeLists.txt
@@ -30,7 +30,6 @@ add_library(
 	Inc/Foundation/tConstants.h
 	Inc/Foundation/tFixInt.h
 	Inc/Foundation/tFundamentals.h
-	Inc/Foundation/tHalf.h
 	Inc/Foundation/tHash.h
 	Inc/Foundation/tList.h
 	Inc/Foundation/tMap.h
@@ -39,6 +38,7 @@ add_library(
 	Inc/Foundation/tPool.h
 	Inc/Foundation/tPriorityQueue.h
 	Inc/Foundation/tRingBuffer.h
+	Inc/Foundation/tSmallFloat.h
 	Inc/Foundation/tSort.h
 	Inc/Foundation/tStandard.h
 	Inc/Foundation/tString.h
