PVRTC at 4bpp and 2bpp is now functional for V1, V2, and V3 pvr files. Note that this is PVRTC decoding version 1 for all three file types, not PVRTC2. This has been tested on V2 and V3 pvr files. There is no current tool to generate V1 files so may need to manually hexedit some V2 files to create some in the future. For this reason V1 pvr files have not been tested.

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -81,6 +81,8 @@ add_library(
 	Contrib/LibTIFF/include/tiff.h
 	Contrib/OpenEXR/loadImage.h
 	Contrib/OpenEXR/loadImage.cpp
+	Contrib/PVRTDecompress/PVRTDecompress.h
+	Contrib/PVRTDecompress/PVRTDecompress.cpp
 	Contrib/QOI/qoi.h
 	Contrib/TinyEXIF/TinyEXIF.h
 	Contrib/TinyEXIF/TinyEXIF.cpp
