--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,12 @@
 			"name": "Launch GDB",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/build/TacentInstall/UnitTests",
+			//"program": "${workspaceFolder}/build/TacentInstall/UnitTests",
+			"program": "${command:cmake.buildDirectory}/TacentInstall/UnitTests",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/build/TacentInstall",
+			//"cwd": "${workspaceFolder}/build/TacentInstall",
+			"cwd": "${command:cmake.buildDirectory}/TacentInstall",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
@@ -32,10 +34,12 @@
 			"name": "Launch Windows",
 			"type": "cppvsdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/build/TacentInstall/UnitTests.exe",
+			//"program": "${workspaceFolder}/build/TacentInstall/UnitTests.exe",
+			"program": "${command:cmake.buildDirectory}/TacentInstall/UnitTests.exe",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/build/TacentInstall",
+			//"cwd": "${workspaceFolder}/build/TacentInstall",
+			"cwd": "${command:cmake.buildDirectory}/TacentInstall",
 			"environment": [],
 			"console": "integratedTerminal",
 		}
